load("//bazel:rust.bzl", "rust")

rust.library(
    name = "cas",
    srcs = [
        "src/hash.rs",
        "src/lib.rs",
        "src/store.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:bytes",
        "@crates//:moka",
        "@crates//:serde",
        "@crates//:serde_bytes",
        "@crates//:sha2",
        "@crates//:tempfile",
        "@crates//:tokio",
    ],
)

rust.test(
    name = "cas_test",
    size = "small",
    crate = ":cas",
    data = ["//:.rustfmt.toml"],
    deps = [
        "//syx/testing",
        "@crates//:tokio",
    ],
)

rust.test_suite(
    name = "cas_test_suite",
    size = "small",
    srcs = ["tests/storable_test.rs"],
    shared_srcs = ["tests/support.rs"],
    data = ["//:.rustfmt.toml"],
    deps = [
        ":cas",
        "//syx/testing",
        "@crates//:cbor2",
        "@crates//:serde",
        "@crates//:serde_bytes",
        "@crates//:tokio",
    ],
)
