load("//bazel:rust.bzl", "rust")

rust.library(
    name = "cas",
    srcs = [
        "src/hash.rs",
        "src/hash_test.rs",
        "src/lib.rs",
        "src/store.rs",
        "src/store_test.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:bitflags",
        "@crates//:bytes",
        "@crates//:fastcdc",
        "@crates//:futures",
        "@crates//:serde",
        "@crates//:serde_bytes",
        "@crates//:sha2",
        "@crates//:tokio",
        "@crates//:zstd",
    ],
)

rust.test(
    name = "cas_test",
    size = "small",
    crate = ":cas",
    data = ["//:.rustfmt.toml"],
    deps = [
        "//syx/testing",
        "@crates//:rand",
        "@crates//:tempfile",
        "@crates//:tokio",
    ],
)

rust.test_suite(
    name = "cas_test_suite",
    size = "small",
    srcs = [
        "tests/digest_fidelity.rs",
        "tests/digest_is_deterministic.rs",
        "tests/digest_is_sensitive.rs",
        "tests/hasher_read_from.rs",
    ],
    data = ["//:.rustfmt.toml"],
    shared_srcs = ["tests/common/mod.rs"],
    deps = [
        ":cas",
        "//syx/testing",
        "@crates//:cbor2",
        "@crates//:serde",
        "@crates//:serde_bytes",
        "@crates//:tokio",
    ],
)
