load("//bazel:py.bzl", "py")

py.library(
    name = "plying",
    srcs = ["__init__.py"],
    deps = [":_plying"],
)

py.extension(
    name = "_plying",
    srcs = ["_plying.rs"],
    deps = ["//crates/plying"],
)

py.test(
    name = "_plying_test",
    size = "small",
    srcs = ["_plying_test.py"],
    deps = [":_plying"],
)
