load("//bazel:py.bzl", "py")
load("//bazel:rust.bzl", "rust")

rust.library(
    name = "plying",
    srcs = [
        "src/beginning.rs",
        "src/completing.rs",
        "src/filter.rs",
        "src/fuse.rs",
        "src/lib.rs",
        "src/map.rs",
        "src/par.rs",
        "src/seq.rs",
        "src/take.rs",
        "src/xf/comp.rs",
        "src/xf/filter.rs",
        "src/xf/identity.rs",
        "src/xf/map.rs",
        "src/xf/mod.rs",
        "src/xf/take.rs",
        "src/zip.rs",
    ],
)

rust.test(
    name = "plying_test",
    size = "small",
    crate = ":plying",
)

rust.test_suite(
    name = "plying_test_suite",
    size = "small",
    srcs = [
        "tests/simple.rs",
        "tests/thread.rs",
    ],
    shared_srcs = ["tests/helper/mod.rs"],
    deps = [":plying"],
)

py.library(
    name = "plying_py",
    srcs = ["__init__.py"],
    deps = [":_plying"],
)

py.extension(
    name = "_plying",
    srcs = ["_plying.rs"],
    deps = [":plying"],
)

py.test(
    name = "_plying_test",
    size = "small",
    srcs = ["_plying_test.py"],
    deps = [":_plying"],
)
